; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_fileutils.c_ClipboardReadMemoryBlock.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_fileutils.c_ClipboardReadMemoryBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GHND = common dso_local global i32 0, align 4
@FILE_BEGIN = common dso_local global i32 0, align 4
@INVALID_SET_FILE_POINTER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32)* @ClipboardReadMemoryBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ClipboardReadMemoryBlock(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @GHND, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32* @GlobalAlloc(i32 %11, i32 %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %52

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @GlobalLock(i32* %18)
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @GlobalFree(i32* %23)
  store i32* null, i32** %4, align 8
  br label %52

25:                                               ; preds = %17
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @FILE_BEGIN, align 4
  %29 = call i64 @SetFilePointer(i32 %26, i32 %27, i32* null, i32 %28)
  %30 = load i64, i64* @INVALID_SET_FILE_POINTER, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %25
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @GlobalUnlock(i32* %33)
  %35 = load i32*, i32** %8, align 8
  %36 = call i32 @GlobalFree(i32* %35)
  store i32* null, i32** %4, align 8
  br label %52

37:                                               ; preds = %25
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @ReadFile(i32 %38, i32 %39, i32 %40, i32* %10, i32* null)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %48, label %43

43:                                               ; preds = %37
  %44 = load i32*, i32** %8, align 8
  %45 = call i32 @GlobalUnlock(i32* %44)
  %46 = load i32*, i32** %8, align 8
  %47 = call i32 @GlobalFree(i32* %46)
  store i32* null, i32** %4, align 8
  br label %52

48:                                               ; preds = %37
  %49 = load i32*, i32** %8, align 8
  %50 = call i32 @GlobalUnlock(i32* %49)
  %51 = load i32*, i32** %8, align 8
  store i32* %51, i32** %4, align 8
  br label %52

52:                                               ; preds = %48, %43, %32, %22, %16
  %53 = load i32*, i32** %4, align 8
  ret i32* %53
}

declare dso_local i32* @GlobalAlloc(i32, i32) #1

declare dso_local i32 @GlobalLock(i32*) #1

declare dso_local i32 @GlobalFree(i32*) #1

declare dso_local i64 @SetFilePointer(i32, i32, i32*, i32) #1

declare dso_local i32 @GlobalUnlock(i32*) #1

declare dso_local i32 @ReadFile(i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
